removed abbreviation for HU
short caption for sweep diagram

better use of daf acronym

--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -22,7 +22,7 @@ In the 1950's and 60's there was a rural to urban migration of the Polynesian po
 
 ## Metabolic syndrome
 
-The World Health Organisation has previously defined Metabolic Syndrome to be glucose intolerance, or diabetes mellitus, and or insulin resistance combined with at least two of the following: impaired glucose regulation or diabetes, insulin resistance, raised arterial pressure, raised plasma triglycerides or low high-density lipoproteins to cholesterol levels, central obesity, and microalbuminuria [@Alberti1998]. \Gls{hu} can also be considered a component but is not required for the condition to be recognised. \gls{hu} is defined as a serum urate $\geq$ 0.42 mmol/L in males and $\geq$ 0.36 mmol/L in females [@Choi2007b]. There has been a slight revision and refinement in the criteria for a diagnosis of metabolic syndrome [@Alberti2009]. The requirement for diabetes mellitus and or insulin resistance is no longer used, instead a requirement of having 3 of the 5 co-morbidities is used.
+The World Health Organisation has previously defined Metabolic Syndrome to be glucose intolerance, or diabetes mellitus, and or insulin resistance combined with at least two of the following: impaired glucose regulation or diabetes, insulin resistance, raised arterial pressure, raised plasma triglycerides or low high-density lipoproteins to cholesterol levels, central obesity, and microalbuminuria [@Alberti1998]. Hyperuricaemia can also be considered a component but is not required for the condition to be recognised. hyperuricaemia is defined as a serum urate $\geq$ 0.42 mmol/L in males and $\geq$ 0.36 mmol/L in females [@Choi2007b]. There has been a slight revision and refinement in the criteria for a diagnosis of metabolic syndrome [@Alberti2009]. The requirement for diabetes mellitus and or insulin resistance is no longer used, instead a requirement of having 3 of the 5 co-morbidities is used.
 
 Obesity is defined as a \gls{bmi} of >30 kg/m^2^ and is a contributing risk factor for many other diseases such as \gls{t2d} and \gls{cvd} [@Haslam2005]. Obesity has been a key focus for research as the prevalence continues to increase and is posing a major threat to health systems in many countries [@Wang2011]. With respect to Pacific people obesity is a major problem, with an obesity rate of 68%. New Zealand M\tex{\={a}}ori have an obesity prevalence of 48% [@Health2013]. From 2012 to 2013 the prevalence of obesity increased by 6% in Pacific populations. 
 
@@ -68,7 +68,7 @@ The way selection can affect allele frequencies can be thought of as a sweep: as
 (ref:sweepDiagram) Representation of alleles before and after a hard sweep.  Each rectangle represents a haplotype within a population. A new mutation is shown in red and neutral alleles are shown in black. After a hard sweep the new mutation becomes fixed in the population, along with the neutral allele that is linked to it.
 
 
-```{r sweepDiagram, echo = FALSE, fig.cap='(ref:sweepDiagram)', fig.width=3, fig.asp=1, out.width='50%', fig.align='center'}
+```{r sweepDiagram, echo = FALSE, fig.cap='(ref:sweepDiagram)', fig.width=3, fig.asp=1, out.width='50%', fig.align='center', fig.scap='Diagram of hard selection sweep.'}
 knitr::include_graphics('images/sweep_diagram.png')
 ```
 
@@ -111,7 +111,7 @@ There are a few methods that are different derivations and applications of looki
 
 #### Integrated haplotype homozygosity score
 
-The \gls{ihs} [@voight2006map; @Szpiech2014] calculation starts with \gls{ehh}, which is the probability that 2 chromosomes carrying a core haplotype are homogenous to the distance $x$. A value of 0 represents no homozygosity, meaning all haplotypes are different, while a value of 1 is complete homozygosity  meaning all haplotypes are the same. The \gls{ehh} value versus distance is integrated to find the area under \gls{ehh} curve until \gls{ehh} decays to 0.05. This \gls{ihh} is calculated based on the ancestral or derived allele and annotated as \gls{ihh}~A~ or \gls{ihh}~D~. The unstandardised \gls{ihs} is calculated in equation \@ref(eq:ihs), which is the \texttt{selscan} version [@Szpiech2014]. Standardisation of \gls{ihs} is shown in equation \@ref(eq:stdihs), where the expectations and standard deviation of equation \@ref(eq:ihs) are estimated from the empirical distribution of SNPs whose derived allele frequency (see section \@ref(dafsection)) p matches the frequency at the core \gls{snp} [@voight2006map]. Large positive values indicate long haplotypes carrying the derived allele, whereas negative values indicate haplotypes carrying the ancestral allele. The calculation in @voight2006map has \gls{ihh}~A~ and \gls{ihh}~D~ switched. The @Szpiech2014 \gls{ihs} calculation is used in this thesis (equations \@ref(eq:ihs) and \@ref(eq:stdihs)). \Gls{ihs} identifies variants under selection driven to intermediate frequencies.
+The \gls{ihs} [@voight2006map; @Szpiech2014] calculation starts with \gls{ehh}, which is the probability that 2 chromosomes carrying a core haplotype are homogenous to the distance $x$. A value of 0 represents no homozygosity, meaning all haplotypes are different, while a value of 1 is complete homozygosity  meaning all haplotypes are the same. The \gls{ehh} value versus distance is integrated to find the area under \gls{ehh} curve until \gls{ehh} decays to 0.05. This \gls{ihh} is calculated based on the ancestral or derived allele and annotated as \gls{ihh}~A~ or \gls{ihh}~D~. The unstandardised \gls{ihs} is calculated in equation \@ref(eq:ihs), which is the \texttt{selscan} version [@Szpiech2014]. Standardisation of \gls{ihs} is shown in equation \@ref(eq:stdihs), where the expectations and standard deviation of equation \@ref(eq:ihs) are estimated from the empirical distribution of SNPs where the \gls{daf} (see section \@ref(dafsection)) p matches the frequency at the core \gls{snp} [@voight2006map]. Large positive values indicate long haplotypes carrying the derived allele, whereas negative values indicate haplotypes carrying the ancestral allele. The calculation in @voight2006map has \gls{ihh}~A~ and \gls{ihh}~D~ switched. The @Szpiech2014 \gls{ihs} calculation is used in this thesis (equations \@ref(eq:ihs) and \@ref(eq:stdihs)). \Gls{ihs} identifies variants under selection driven to intermediate frequencies.
 
 \begin{equation} 
 iHS_{unstd} = \ln{\frac{iHH_D}{iHH_A}}
@@ -185,11 +185,11 @@ F~ST~ has been used in multiple studies as evidence for natural selection [@Akey
 
 #### Selection by conditional coalescent tree
 
-Selection by conditional coalescent tree (@Wang2014) detects recent positive selection by searching for an imbalance of genetic variants and conditions these on the allele frequencies of the candidate loci. Selection by conditional coalescent tree pinpoints the causal variant more accurately by using a method that is based on the conditional coalescent tree method from @Wiuf1999, where haplotypes are partitioned into two subgroups according to the allelic state at a particular locus. It is assumed one subgroup carries the derived allele at the locus and the other subgroup carries the ancestral allele. The coalescence of a sample of haplotypes, conditioning on the particular mutation, means each group should coalesce together individually before the two subgroups coalesce. This is a similar idea to that of \gls{ehh} used by \gls{ihs}, and the results of \gls{ihs} and selection by conditional coalescent tree tend to be similar. The selection statistic (S) is based on comparing the lineage lengths of the two groups. Under neutrality S approaches $\theta$, with significant departures from $\theta$ being considered evidence of positive selection. When natural selection has a strong hitchhiking effect on a selectively favoured allele, selection by conditional coalescent tree (and \gls{ihs}) is more powerful than \gls{td}, Fay and Wu’s _H_, and measuring change in derived allele frequency (see \@ref(dafsection)). In most cases the power of selection by conditional coalescent tree is equivalent to \gls{ihs} except when selection is very strong, in which case \gls{ihs} has more power [@Wang2014]. The power of selection by conditional coalescent tree can be improved by increasing the sample size. Selection by conditional coalescent tree performs moderately with population demographic events (such as bottlenecks) and out performs \gls{td} and \gls{ihs} in false discovery rate, although it does not perform as well as  \gls{fwh} [@Wang2014].
+Selection by conditional coalescent tree (@Wang2014) detects recent positive selection by searching for an imbalance of genetic variants and conditions these on the allele frequencies of the candidate loci. Selection by conditional coalescent tree pinpoints the causal variant more accurately by using a method that is based on the conditional coalescent tree method from @Wiuf1999, where haplotypes are partitioned into two subgroups according to the allelic state at a particular locus. It is assumed one subgroup carries the derived allele at the locus and the other subgroup carries the ancestral allele. The coalescence of a sample of haplotypes, conditioning on the particular mutation, means each group should coalesce together individually before the two subgroups coalesce. This is a similar idea to that of \gls{ehh} used by \gls{ihs}, and the results of \gls{ihs} and selection by conditional coalescent tree tend to be similar. The selection statistic (S) is based on comparing the lineage lengths of the two groups. Under neutrality S approaches $\theta$, with significant departures from $\theta$ being considered evidence of positive selection. When natural selection has a strong hitch-hiking effect on a selectively favoured allele, selection by conditional coalescent tree (and \gls{ihs}) is more powerful than \gls{td}, Fay and Wu’s _H_, and measuring change in derived allele frequency (see \@ref(dafsection)). In most cases the power of selection by conditional coalescent tree is equivalent to \gls{ihs} except when selection is very strong, in which case \gls{ihs} has more power [@Wang2014]. The power of selection by conditional coalescent tree can be improved by increasing the sample size. Selection by conditional coalescent tree performs moderately with population demographic events (such as bottlenecks) and out performs \gls{td} and \gls{ihs} in false discovery rate, although it does not perform as well as  \gls{fwh} [@Wang2014].
 
 #### Change in derived allele frequency {#dafsection}
 
-Similar to F~ST~, \gls{ddaf} looks at population differentiation. The derived allele is determined through the use of an ancestral out-group such as chimpanzees when used in human populations. \Gls{daf} itself is calculated by determining the ancestral and derived state for an allele and calculating the allele frequency with regard to the derived state.\gls{ddaf} measures the absolute difference in the derived allele frequency between two populations [@Grossman2010] and has greater power to detect sweeps, both partial and complete, and outperforms \gls{xpehh} for partial sweeps [@Colonna2014]. \gls{ddaf} is part of the composite of multiple sites statistic [@Grossman2010] but has also been used as a standalone metric in humans [@Colonna2014; @Gudbjartsson2015] and in other species such as cattle [@Randhawa2014] to measure differentiation.
+Similar to F~ST~, \gls{ddaf} looks at population differentiation. The derived allele is determined through the use of an ancestral out-group such as chimpanzees when used in human populations. \Gls{daf} itself is calculated by determining the ancestral and derived state for an allele and calculating the allele frequency with regard to the derived state. \gls{ddaf} measures the absolute difference in the derived allele frequency between two populations [@Grossman2010] and has greater power to detect sweeps, both partial and complete, and outperforms \gls{xpehh} for partial sweeps [@Colonna2014]. \gls{ddaf} is part of the composite of multiple sites statistic [@Grossman2010] but has also been used as a standalone metric in humans [@Colonna2014; @Gudbjartsson2015] and in other species such as cattle [@Randhawa2014] to measure differentiation.
 
 ### Composite methods
 
@@ -242,7 +242,7 @@ In order to use haplotypic methods, (re)construction of haplotypes is required. 
 
 ## Improving GWAS
 
-\Gls{gwas} is a method to scan genomes, usually \gls{snp} genotype data, for association with a phenotype. Association is usually tested between a trait and a single \gls{snp} using either linear regression (continuous variable) or logistic regression (binomial variable), with confounders included where possible as covariates to the models. These assocation tests are repeated for each \gls{snp} across the genome (for a comprehensive explanation of \gls{gwas} methods see @bush_chapter_2012). Commonly an additive model is used for the \gls{snp}. The strength of \gls{gwas} is that prior knowledge of loci is not required and can be used as a tool for hypothesis generation. \Gls{gwas}, because of the large number of association tests, require large cohorts of samples to achieve sufficient power for statistical significance. As the effect size for a variant decreases, larger sample sizes are also needed, as power is proportional to the square of the effect size [@Korte2013; @Hemani2013]. Limitations in recruiting sufficient numbers of participants for \gls{gwas} therefore requires new ways of increasing power to detect smaller effects without needing to increase sample size, as outlined in this section. The goal of being able to prioritise \gls{gwas} results by using additional information, such as incorporating \gls{ld} or selection statistics by using a weighting system to increase the power of a \gls{gwas}, has been suggested [@Ayodo2007; @Roeder2006]. When \gls{ld} between observed \glspl{snp} and causal variants is high, such as in the case of selection, greater power in \gls{gwas} can be achieved by focusing on searching for non-additive variance [@Hemani2013].
+\Gls{gwas} is a method to scan genomes, usually \gls{snp} genotype data, for association with a phenotype. Association is usually tested between a trait and a single \gls{snp} using either linear regression (continuous variable) or logistic regression (binomial variable), with confounders included where possible as covariates to the models. These association tests are repeated for each \gls{snp} across the genome (for a comprehensive explanation of \gls{gwas} methods see @bush_chapter_2012). Commonly an additive model is used for the \gls{snp}. The strength of \gls{gwas} is that prior knowledge of loci is not required and can be used as a tool for hypothesis generation. \Gls{gwas}, because of the large number of association tests, require large cohorts of samples to achieve sufficient power for statistical significance. As the effect size for a variant decreases, larger sample sizes are also needed, as power is proportional to the square of the effect size [@Korte2013; @Hemani2013]. Limitations in recruiting sufficient numbers of participants for \gls{gwas} therefore requires new ways of increasing power to detect smaller effects without needing to increase sample size, as outlined in this section. The goal of being able to prioritise \gls{gwas} results by using additional information, such as incorporating \gls{ld} or selection statistics by using a weighting system to increase the power of a \gls{gwas}, has been suggested [@Ayodo2007; @Roeder2006]. When \gls{ld} between observed \glspl{snp} and causal variants is high, such as in the case of selection, greater power in \gls{gwas} can be achieved by focusing on searching for non-additive variance [@Hemani2013].
 
 The basis of \gls{gwas} studies is to identify \glspl{snp} that are associated with differences in the mean of a trait. These studies do not necessarily identify the causal \gls{snp} but instead identify a marker for the causal variant, usually in \gls{ld}. @Fisher1919 showed that total genetic variance could be split into components of additive, dominance and epistatic effects. The additive component has been shown to contribute the most to the overall genetic variance, with epistatic variance contributing little in an outbred population [@Hill2008]. Complex traits gain their complexity from being the sum of interactions from many small effect loci, or the product of non-additive interactions between loci and the environment, making it challenging to find the exact contribution of a locus to a trait [@Fu2013a]. These small, true effect loci can end up non-significant due to the noise in the data but might be  retrieved using methods that find non-additive effects. 
 
@@ -291,13 +291,13 @@ A few candidate-genes for selection which also have been associated with obesity
 ### Selection of metabolic syndrome and urate {#goutMetSyn}
 
 
-The genetic influence of urate and gout is found in the under-excretion of serum urate. There are 28 loci that have been identified as having a role in \gls{hu} and gout, of which, two (_ABCG2_ and _SLC2A9_) are responsible 3.4% of the variability of urate [@Kottgen2013]. _SLC2A9_ encodes a urate transporter expressed on both the apical and baso-lateral membranes in the proximal tubule of the kidney and reabsorbs urate [@Mandal2015]. _ABCG2_ encodes an ATP powered urate transporter and is responsible for urate excretion mostly in the gut [@Maliepaard2001; @Mandal2015]. Twenty-six other loci associated with serum urate explain a further 3.6% of the variance [@Kottgen2013]. The heritability of serum uric acid ranges from 40 - 70% [@Nath2007; @Yang2005]. This difference in explained variability and total heritability leaves a large component yet to be explained. This missing heritability could be reduced through identifying additional variance attributed to non-additive effects.
+The genetic influence of urate and gout is found in the under-excretion of serum urate. There are 28 loci that have been identified as having a role in hyperuricaemia and gout, of which, two (_ABCG2_ and _SLC2A9_) are responsible 3.4% of the variability of urate [@Kottgen2013]. _SLC2A9_ encodes a urate transporter expressed on both the apical and baso-lateral membranes in the proximal tubule of the kidney and reabsorbs urate [@Mandal2015]. _ABCG2_ encodes an ATP powered urate transporter and is responsible for urate excretion mostly in the gut [@Maliepaard2001; @Mandal2015]. Twenty-six other loci associated with serum urate explain a further 3.6% of the variance [@Kottgen2013]. The heritability of serum uric acid ranges from 40 - 70% [@Nath2007; @Yang2005]. This difference in explained variability and total heritability leaves a large component yet to be explained. This missing heritability could be reduced through identifying additional variance attributed to non-additive effects.
 
 <!-- Heritability of \gls{bmi} ranges from 45% to 84% in twin studies [@Schousboe2003]. -->
 
 There have been multiple genetic loci associated with \gls{t2d} [@Billings2010] and \gls{bmi} [@Locke2015], however, @Chen2010 found no evidence for enrichment in selection for \gls{bmi}, but found significant enrichment for \gls{t2d}. The genes associated with \gls{t2d} have been found to be differentiated by population, however the individual \glspl{snp} are often not [@pickrell2009signals]. @Koh2014 identified six \glspl{snp} in or near nine genes that had been reported as \gls{t2d} associated and overlapped with evidence of positive selection in East Asian populations. Common variants that have been found in European populations associating with obesity do not replicate in the Samoan population, although this is likely due to power [@Karns2012]. The non-replication of European variants in Polynesians and the high prevalence of obesity in Polynesian populations suggest there is likely to be some population specific variants that are yet to be identified, similar to the Polynesian specific variant in _CREBRF_ (rs373863828), associated with obesity and protection for \gls{t2d}, identified in the Samoan population [@Minster2016]. Rare variants tend to be recent and therefore geographically restricted [@1KGP2012].
 
-The benefits of urate are in line with the categories found to be enriched by selection in genome wide scans. Urate is an anti-oxidant in the blood, acting to protect not just erythrocytes but also T and B lymphocytes and macrophages [@Ames1981]. Urate has also been hypothesised to have had a survival advantage during the Miocene period, when a series of mutations in urate oxidase occurred, leading to elevated urate. \Gls{hu} enables blood pressure to be maintained under low salt dietary conditions [@Watanabe2002]. Serum urate is also a potent anti-oxidant which accounts for >50% of the anti-oxidant activity of the blood [@Glantzounis2005; @Parmar2009]. Later in life elevated serum urate is associated with increased cognitive function [@Euser2009]. Urate crystals activate the NLRP3 inflammasome which plays an important role in systemic infection and sepsis [@Opitz2009]. The role of urate in these situations shows that while \gls{hu} is now considered as contributing to disease (such as gout), in the past it may have influenced longevity and survival, therefore increasing reproductive success and being a phenotype that has undergone selection. 
+The benefits of urate are in line with the categories found to be enriched by selection in genome wide scans. Urate is an anti-oxidant in the blood, acting to protect not just erythrocytes but also T and B lymphocytes and macrophages [@Ames1981]. Urate has also been hypothesised to have had a survival advantage during the Miocene period, when a series of mutations in urate oxidase occurred, leading to elevated urate. Hyperuricaemia enables blood pressure to be maintained under low salt dietary conditions [@Watanabe2002]. Serum urate is also a potent anti-oxidant which accounts for >50% of the anti-oxidant activity of the blood [@Glantzounis2005; @Parmar2009]. Later in life elevated serum urate is associated with increased cognitive function [@Euser2009]. Urate crystals activate the NLRP3 inflammasome which plays an important role in systemic infection and sepsis [@Opitz2009]. The role of urate in these situations shows that while hyperuricaemia is now considered as contributing to disease (such as gout), in the past it may have influenced longevity and survival, therefore increasing reproductive success and being a phenotype that has undergone selection. 
 
 An elevated prevalence of metabolic syndrome co-morbidities and hyperuricaemia against a unique genetic background of Polynesian populations provides an important opportunity to study the role and effects that selection might have played on these metabolic conditions.
 
