HU abbreviation changed to full word
adding in short captions to figures

--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -65,19 +65,19 @@ The benefits of urate include the its ability to increase blood pressure and it 
 <!-- ?? The fructose response for leads to insulin desensitivity @Johnston2007? -->
 <!--     - fructose blocks glyconeogeneis -> increased glycogen storage -->
 
-An increased level of urate in the blood is called \gls{hu} and is causal of gout [@Choi2005a]. The prevalence of \gls{hu} in Polynesian populations is higher than many other populations [@Gosling2014], and co-morbid with it are higher prevalences of the co-morbidities of gout, diabetes, obesity, dyslipidaemia, kidney disease, and \gls{cvd} [@Winnard2013]. In New Zealand, gout prevalence is ~3.1%, however, prevalence in M\tex{\={a}}ori and Pacific peoples is 6-8% with 40% of individuals with gout also having diabetes or \gls{cvd} [@Winnard2013]. Gout is an immune response to the monosodium urate crystals that are formed from the precipitation of urate from the blood, with \gls{hu} being a prerequisite for the formation of these crystals [@Merriman2011a].
+An increased level of urate in the blood is called hyperuricaemia and is causal of gout [@Choi2005a]. The prevalence of hyperuricaemia in Polynesian populations is higher than many other populations [@Gosling2014], and co-morbid with it are higher prevalences of the co-morbidities of gout, diabetes, obesity, dyslipidaemia, kidney disease, and \gls{cvd} [@Winnard2013]. In New Zealand, gout prevalence is ~3.1%, however, prevalence in M\tex{\={a}}ori and Pacific peoples is 6-8% with 40% of individuals with gout also having diabetes or \gls{cvd} [@Winnard2013]. Gout is an immune response to the monosodium urate crystals that are formed from the precipitation of urate from the blood, with hyperuricaemia being a prerequisite for the formation of these crystals [@Merriman2011a].
 
-<!-- \Gls{hu} in the Pacific is seen in Eastern and Western Polynesia, but the prevalence in the ancestral populations of Near and Remote Oceania is reduced. However, Taiwanese aboriginals also have the higher prevalence of \gls{hu} [@Gosling2014]. -->
+<!-- Hyperuricaemia in the Pacific is seen in Eastern and Western Polynesia, but the prevalence in the ancestral populations of Near and Remote Oceania is reduced. However, Taiwanese aboriginals also have the higher prevalence of hyperuricaemia [@Gosling2014]. -->
 
-\Gls{hu} has two main components: overproduction of urate, and under-excretion. Overproduction is influenced by diet, such as high purine or fructose content, or increased cell turnover as observed in cancer, or under genetic control. Under-excretion is the main cause of \gls{hu}, caused by either increased reabsorption or decreased secretion. The kidneys are the organ where the majority of secretion and excretion of urate is performed, with about 90% of urate being reabsorbed [@Kutzing2008]. In the proximal tubule, on the apical membrane, the urate transporters of URAT1 (_SLC22A12_), OAT4 (_SLC22A11_), and GLUT9 (_SLC2A9_) reabsorb urate, whereas ABCC4, NPT4 (_SLC17A3_), and NPT1 (_SLC17A1_) are responsible for secretion (Figure \@ref(fig:urateTransporters)) [@Mandal2015]. On the basolateral membrane, OAT1-3 (_SLC22A6-8_), increase intracellular uric acid, but GLUT9 moves uric acid from intracellular to extracellular [@Mandal2015]. The ATP powered transporter ABCG2 is responsible for excretion of urate in the gut and there are \glspl{snp} that lead to a reduction of function in ABCG2 in all populations (Figure \@ref(fig:urateTransporters)) [@Phipps-Green2010;@Cleophas2017]. Together the genes _SLC2A9_ and _ABCG2_ account for 3.4% of the genetic variability of urate [@Kottgen2013].
+Hyperuricaemia has two main components: overproduction of urate, and under-excretion. Overproduction is influenced by diet, such as high purine or fructose content, or increased cell turnover as observed in cancer, or under genetic control. Under-excretion is the main cause of hyperuricaemia, caused by either increased reabsorption or decreased secretion. The kidneys are the organ where the majority of secretion and excretion of urate is performed, with about 90% of urate being reabsorbed [@Kutzing2008]. In the proximal tubule, on the apical membrane, the urate transporters of URAT1 (_SLC22A12_), OAT4 (_SLC22A11_), and GLUT9 (_SLC2A9_) reabsorb urate, whereas ABCC4, NPT4 (_SLC17A3_), and NPT1 (_SLC17A1_) are responsible for secretion (Figure \@ref(fig:urateTransporters)) [@Mandal2015]. On the basolateral membrane, OAT1-3 (_SLC22A6-8_), increase intracellular uric acid, but GLUT9 moves uric acid from intracellular to extracellular [@Mandal2015]. The ATP powered transporter ABCG2 is responsible for excretion of urate in the gut and there are \glspl{snp} that lead to a reduction of function in ABCG2 in all populations (Figure \@ref(fig:urateTransporters)) [@Phipps-Green2010;@Cleophas2017]. Together the genes _SLC2A9_ and _ABCG2_ account for 3.4% of the genetic variability of urate [@Kottgen2013].
 
-```{r urateTransporters, echo = FALSE, fig.cap = '(ref:urateTransporters)'}
+```{r urateTransporters, echo = FALSE, fig.cap = '(ref:urateTransporters)', fig.scap = 'Location of urate transporters of gut and kidney.', out.extra=''}
 knitr::include_graphics("images/03_selectionpipeline/urate_excretion_diagram.png")
 ```
 
 (ref:urateTransporters) Diagram representing the urate transporters in the gut (entrocyte) and kidney (renal proximal tubule cell). Direction of urate movement is indicated by arrows. Adapted from @Major2018.
 
-From previous studies there is prior evidence of selection at urate associated loci [@Zhang2013a; @Grossman2013; @Ramos2017]. In the review from @Ramos2017 on natural selection in rheumatic disease, one of the main loci for gout, _SLC2A9_, in the \gls{yri} population was reported as having been selected. The region of _BCAS3_ and _NACA2_ also had evidence, originally found by @Grossman2013 in the Asian population from the HapMap project data. @Zhang2013a had evidence for the urate-associated loci of _ATXN2_ (rs653178) and _RREB1_ (rs675209) having undergone selection when using a F~ST~-based method. The co-morbidities of \gls{hu} also show signs of selection, with loci associated with \gls{t2d} having been reported as having undergone selection [@pickrell2009signals; @voight2006map; @Grossman2010; @Grossman2013]. Most recently a Samoan specific variant in _CREBRF_ that is protective for \gls{t2d} but causal for obesity has also been identified as having evidence of selection in the Samoan population [@Minster2016].
+From previous studies there is prior evidence of selection at urate associated loci [@Zhang2013a; @Grossman2013; @Ramos2017]. In the review from @Ramos2017 on natural selection in rheumatic disease, one of the main loci for gout, _SLC2A9_, in the \gls{yri} population was reported as having been selected. The region of _BCAS3_ and _NACA2_ also had evidence, originally found by @Grossman2013 in the Asian population from the HapMap project data. @Zhang2013a had evidence for the urate-associated loci of _ATXN2_ (rs653178) and _RREB1_ (rs675209) having undergone selection when using a F~ST~-based method. The co-morbidities of hyperuricaemia also show signs of selection, with loci associated with \gls{t2d} having been reported as having undergone selection [@pickrell2009signals; @voight2006map; @Grossman2010; @Grossman2013]. Most recently a Samoan specific variant in _CREBRF_ that is protective for \gls{t2d} but causal for obesity has also been identified as having evidence of selection in the Samoan population [@Minster2016].
 
 <!-- need to reword as too many used of "has evidence"-->
 
@@ -995,7 +995,7 @@ A complete list of all of the genes that had windows in the 1^st^ percentile and
 
 (ref:superUpset) Upset plot showing the intersections of genes that had both intra-population haplotypic and frequency spectrum-evidence at the individual population level and were then pooled into their super population group. The left histogram shows the total number of genes with both haplotypic and frequency spectrum-based evidence for each super population. The top histogram is the number of genes that were in common between the super populations. The dots indicate the particular set of super populations for the intersection and are ordered by number of intersecting sets.
 
-```{r superUpset, fig.cap = '(ref:superUpset)', eval = TRUE}
+```{r superUpset, fig.cap = '(ref:superUpset)', eval = TRUE, fig.scap = "Upset plot of intrapopulation haplotypic and frequency spectrum-based evidence pooled by super population.", out.extra = ""}
 
 p <- panel %>% mutate(pop2 = paste0(super_pop,'_',pop)) %>% select(pop,pop2) %>% filter(!pop %in% c('WPN','EPN','POL','NAD')) %>% distinct()
 pop_genes <- lapply(p$pop, extract_sig)
@@ -1013,7 +1013,7 @@ rm(p)
 
 (ref:polyUpset) Upset plot showing the number of genes that have evidence from \gls{ihs} or \gls{nsl}, and met the lower threshold from any of \gls{td}, \gls{fwh}, \gls{flf}, or \gls{ze}, in the four Polynesian populations. The left histogram shows the total number of genes with both haplotypic and frequency spectrum-based evidence for each Polynesian population. The top histogram is the number of genes that were in common between the Polynesian populations. The dots indicate the particular set of populations for the intersection and are ordered by number of intersecting sets.
 
-```{r polyUpset, fig.cap = '(ref:polyUpset)'}
+```{r polyUpset, fig.cap = '(ref:polyUpset)', fig.scap = 'Upset plot of number of genes with evidence of possible positive selection in Polynesian populations.', out.extra=''}
 # show the intersection of the genes that were deemed significant between the different polynesian populations
 UpSetR::upset(fromList(list(CIM = extract_sig("CIM"), 
                             NZM = extract_sig("NZM"), 
@@ -2066,13 +2066,13 @@ filterGenes <- c("ABHD6","ALPK2","APEH","ASAP1","AUH","BIN1","BRD2","C2","C2orf7
 
 #### Selection in Polynesian populations for genes associated with urate and metabolic disease 
 
-In order to establish if there was evidence of selection in genes associated with urate and diseases with \gls{hu} as a co-morbidity, loci that associated with these conditions were extracted from the \gls{gwas} catalog (as per section \@ref(diseaselist), see Table \@ref(tab:gwascatref) for references for each trait) and neutrality and selection statistics that intersected these loci were collated. Table \@ref(tab:superDiseaseGenesTab) shows the breakdown of the number of different statistics by population that met the significance thresholds for the \gls{sfs} based statistics, the haplotype based statistics, and the overlap between the frequency spectrum and haplotypic methods. The \gls{cim} population had the least number of genes of the Polynesian populations that had a significant result out of the genes that were associated with urate. The Polynesian populations had the fewest number of genes with significant \gls{ihs} or \gls{nsl} for obesity and the Western Polynesian populations had the fewest number of genes for \gls{t2d}.
+In order to establish if there was evidence of selection in genes associated with urate and diseases with hyperuricaemia as a co-morbidity, loci that associated with these conditions were extracted from the \gls{gwas} catalog (as per section \@ref(diseaselist), see Table \@ref(tab:gwascatref) for references for each trait) and neutrality and selection statistics that intersected these loci were collated. Table \@ref(tab:superDiseaseGenesTab) shows the breakdown of the number of different statistics by population that met the significance thresholds for the \gls{sfs} based statistics, the haplotype based statistics, and the overlap between the frequency spectrum and haplotypic methods. The \gls{cim} population had the least number of genes of the Polynesian populations that had a significant result out of the genes that were associated with urate. The Polynesian populations had the fewest number of genes with significant \gls{ihs} or \gls{nsl} for obesity and the Western Polynesian populations had the fewest number of genes for \gls{t2d}.
 
 Figure \@ref(fig:intraSelGenes) shows the genes associated with urate, gout and related diseases that had a significant marker with either \gls{ihs} or \gls{nsl} and also had a significant window from a \gls{sfs}-based statistic in at least one Polynesian population. There were only 10 genes that met this criteria, of which, the \gls{t2d} associated gene, _PTPRD_, was the only gene that met the criteria, and also had significant markers from all Polynesian populations in \gls{ihs}. The obesity-associated genes _GRID1_, _FHIT_, and _ERBB4_, all had windows from \gls{fwh} that were significant in all Polynesian populations. _ERBB4_ also had significant windows for all Polynesian populations for \gls{td}.
 
 (ref:intraSelGenes) Genes associated with urate, gout, obesity, \gls{t2d}, kidney disease, and metabolic syndrome having both significance in intra-population \gls{sfs} and haplotypic based methods in at least one Polynesian population. Numbers inside boxes indicate the number of significant windows (\gls{sfs} methods) or \glspl{snp} (haplotypic methods) for the population. 
 
-```{r intraSelGenes, fig.cap = '(ref:intraSelGenes)', fig.width=7}
+```{r intraSelGenes, fig.cap = '(ref:intraSelGenes)', fig.width=7, fig.scap = "Genes associated with urate, gout, obesity, type 2 diabetes, kidney disease, and metabolic syndrome with evidence from site-frequency spectrum and haplotypic statistics in Polynesian populations.", out.extra=''}
 # genes that have at least one poly population with significance in both haplotypic and sfs stats
 rbind(
 bind_rows(cim_obesity_sig, cim_urate_sig, cim_t2d_sig, cim_metsyn_sig, cim_kd_sig) %>% mutate(pop = 'CIM') %>% distinct(),
