--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -60,7 +60,7 @@
 
 \newacronym[description={kilobases}]{kb}{kb}{kilobases}
 
-\newacronym[description={hyperuricaemia}]{hu}{HU}{hyperuricaemia}
+%\newacronym[description={hyperuricaemia}]{hu}{HU}{hyperuricaemia}
 \newacronym[description={body mass index}]{bmi}{BMI}{body mass index}
 \newacronym[description={cardio vascular disease}]{cvd}{CVD}{cardio vascular disease}
 \newacronym[description={urate lowering therapy}]{ult}{ULT}{urate lowering therapy}
